--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,36 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 329750081887-marc1h1maend955ctbi51a23rqqjidbp.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
+          facebook:
+            client-id: 1237986113444797
+            client-secret: 3e2806b5aa8cb2a238a92da48fc07ab0
+            scope:
+              - email
+              - public_profile
+          naver:
+            client-id: I5Y8qFOezjHB_ExV0ckN
+            client-secret: qwDGenPzPY
+            scope:
+              - name
+              - email
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response #회원정보를 json으로 받는데 response라는 키값으로 네이버가 리턴해줌
